# simple_opengl_use

./: CMakeLists.txt  README.md  main.cpp
inc/: stb_image.h  texture.hpp
inc/glad/: glad.h
src/: glad.c
